test/corpus/comments.txt
============================================
Comments
============================================
#comment 1
A: B
C: D d #not comment
#inline comment
key: value


#floating comment

K: L l

#TAG: "key" confusing comment

# comment with a space at the beginning
---

(source
    (comment)
    (paragraph
        (statement
          (field_name)
          (field_value (simple_value)))
        (statement
          (field_name)
          (field_value (simple_value)))
          (comment)
        (statement
          (field_name)
          (field_value (simple_value)))
        (comment))
    (paragraph
        (statement
          (field_name)
          (field_value (simple_value)))
        (comment))
    (comment))
